kubernets/debug.yaml
# debug-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug-pod
spec:
  containers:
  - name: debug-container
    image: nicolaka/netshoot
    command:
    - sleep
    - "3600"
  restartPolicy: Never
