kubernets/chatbot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pharmaco-chatbot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pharmaco-chatbot
  template:
    metadata:
      labels:
        app: pharmaco-chatbot
    spec:
      containers:
      - name: pharmaco-chatbot
        image: shiva9921/pharmaco-chatbot:v1.021
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: pharmaco-chatbot-service
spec:
  selector:
    app: pharmaco-chatbot
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
  sessionAffinity: ClientIP  # Set session affinity to ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800  # Set the session timeout (optional)
