kubernets/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pharmaco
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pharmaco
  template:
    metadata:
      labels:
        app: pharmaco
    spec:
      containers:
      - name: pharmaco
        image: shiva9921/pharmaco-temp:v1.32
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: pharmaco-service
spec:
  selector:
    app: pharmaco
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
  sessionAffinity: ClientIP  # Set session affinity to ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800  # Set the session timeout (optional)
