kubernets/metabase.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metabase-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metabase
  template:
    metadata:
      labels:
        app: metabase
    spec:
      containers:
      - name: metabase
        image: metabase/metabase:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: metabase-service
spec:
  type: LoadBalancer  # Expose externally
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: metabase
