kubernets/istio.yaml
# # Gateway
# apiVersion: networking.istio.io/v1alpha3
# kind: Gateway
# metadata:
#   name: pharmaco-gateway
# spec:
#   selector:
#     istio: ingressgateway
#   servers:
#   - port:
#       number: 80
#       name: http
#       protocol: HTTP
#     hosts:
#     - "*"

# ---
# # VirtualService
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: pharmaco-virtual-service
# spec:
#   hosts:
#   - "*"
#   gateways:
#   - pharmaco-gateway
#   http:
#   - match:
#     - uri:
#         prefix: /
#     - uri:
#         exact: /login
#     - uri:
#         exact: /logout
#     - uri:
#         exact: /display_inventory
#     route:
#     - destination:
#         host: pharmaco-service # Name of your Kubernetes service
#         port:
#           number: 80



################
# ISTIO
#################

# Gateway
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: pharmaco-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pharmaco-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - pharmaco-gateway
  http:
  - name: pharmaco route
    route:
      - destination:
          host: pharmaco-service1
          subset: v1
        weight: 80
      - destination:
         host: pharmaco-service2
         subset: v2
        weight: 20

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: pharmaco-destination-1
spec:
  host: pharmaco-service1
  subsets:
  - name: v1
    labels:
      app: pharmaco1
      version: v1
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
    
---


apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: pharmaco-destination-2
spec:
  host: pharmaco-service2
  subsets:
  - name: v2
    labels:
      app: pharmaco2
      version: v2
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
